# wm_pose_classification

./: CMakeLists.txt  package.xml
scripts/: HumanPoses.npy  data_concatenator.py  pose_classification_node.py
